--- a/package.json
+++ b/package.json
@@ -16,10 +16,10 @@
     "clsx": "^2.1.1",
     "embla-carousel-react": "^8.6.0",
     "lucide-react": "^0.544.0",
-    "next": "15.5.2",
+    "next": "^16.1.6",
     "next-themes": "^0.4.6",
-    "react": "19.1.0",
-    "react-dom": "19.1.0",
+    "react": "^19.2.4",
+    "react-dom": "^19.2.4",
     "react-fast-marquee": "^1.6.5",
     "tailwind-merge": "^3.3.1"
   },
